Add list of allowed SysML diagrams

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -47,6 +47,24 @@ First ideas
 
 \end{comment}
 
+\subsection{Selection of used diagrams}
+
+SysML diagrams that can be used for modeling are:
+\begin{itemize}
+\item \emph{Package Diagram}: Structure description
+\item \emph{Block Definition Diagram} (BDD): Structure description
+\item \emph{Internal Block Diagram} (IBD): Structure description
+\item \emph{State Machine Diagram}: Behaviour description
+\item \emph{Requirement Diagram}: Requirements description
+\end{itemize}
+
+The following other SysML diagrams \emph{cannot} be used:
+\begin{itemize}
+\item \emph{Parametric Diagram}
+\item \emph{Activity Diagram}
+\item \emph{Sequence Diagram}
+\item \emph{Use Case Diagram}
+\end{itemize}
 
 
 \subsection{Structural  diagrams}
