Add restrictions on the various kinds of SysML diagrams

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -66,6 +66,155 @@ The following other SysML diagrams \emph{cannot} be used:
 \item \emph{Use Case Diagram}
 \end{itemize}
 
+\subsection{Restrictions on Package Diagram}
+
+The following Package Diagram nodes and paths can be used for
+modelling:
+\begin{itemize}
+\item Comment Note
+\item Package Node
+\item Packageable Element Node
+\end{itemize}
+
+The following items are \emph{cannot} be used:
+\begin{itemize}
+\item Model Node
+\item View Node
+\item Viewpoint Node
+\item Containenement Path
+\item Import Path
+\item Dependency Path
+\item Conform Path
+\item Metamodel Node
+\item Metaclass Node
+\item Model Library Node
+\item Stereotype Node
+\item Profile Node
+\item Generalization Path
+\item Extension Path
+\item Associatin Path
+\item Reference Path
+\item Profile Application Path
+\end{itemize}
+
+\subsection{Restrictions on Block Definition Diagram}
+
+The following Block Definition Diagram nodes and paths can be used for
+modelling:
+\begin{itemize}
+\item Block Node
+\item Enumeration Node
+\item Composite Association Path
+\item Flow Specification Node
+\item Atomic Flow Port Node
+\end{itemize}
+
+The following items are \emph{cannot} be used:
+\begin{itemize}
+\item Quantity Kind and Unit Nodes
+\item Value Type Node
+\item Actor Node
+\item Interface Block Node (SysML 1.3)
+\item Interface Node
+\item Signal Node
+\item Interface Compartments for Block Node
+\item Reference Association Path
+\item Association Block Path and Node
+\item Generalization Path
+\item Full Port Node
+\item Proxy Port Node
+\item Proxy Port Node With Interfaces
+\item Port Compartments for Block Node
+\item Nonatomic Flow Port Node
+\item Block Node with Constraint Compartment
+\item Constraint Block Node
+\item Activity Node
+\item Activity Composition Path
+\item Object Node Composition Path
+\item Instance Specification Node
+\item Association Instance Specification (Link) Path
+\end{itemize}
+
+\subsection{Restrictions on Internal Block Diagram}
+
+The following Internal Block Diagram nodes and paths can be used for
+modelling:
+\begin{itemize}
+\item Part Node
+\item Connector Path
+\end{itemize}
+
+The following items are \emph{cannot} be used:
+\begin{itemize}
+\item Actor Part Node
+\item Reference Node
+\item Participant Property Node
+\item Value Property Node
+\item Connector Property Path and Node
+\item Item Flow Node
+\end{itemize}
+
+\subsection{Restrictions on State Machine Diagram}
+
+The following State Machine Diagram nodes and paths can be used for
+modelling:
+\begin{itemize}
+\item State Machine with Entry- and Exit-Point Pseudostate Nodes
+\item Atomic State Node
+\item Composite State with Entry- and Exit-Point Pseudostate Nodes
+\item Composite State Node with Multiple Region
+\item Terminate Pseudostate Node
+\item Initial Pseudostate Node
+\item Final State Node
+\item Action Node
+\item Time Event Transition Path
+\item Change Event Transition Path
+\end{itemize}
+
+The following items are \emph{cannot} be used:
+\begin{itemize}
+\item Sub-State Machine Node with Connection Points
+\item Choice Pseudostate Node
+\item Junction Pseudostate Node
+\item Trigger Node
+\item Send Signal Node
+\item Join Pseudostate Node
+\item Frok Pseudostate Node
+\item History Pseudostate Node
+\item Signal Event Transition Path
+\item Call Event Transition Path
+\end{itemize}
+
+\subsection{Restrictions on Requirement Diagram}
+
+The following Requirement Diagram nodes and paths can be used for
+modelling:
+\begin{itemize}
+\item Requirement Node
+\item Package Node
+\item Containment Path
+\item Derivation Path
+\item Satisfaction Path
+\item Verification Path
+\item Rationale Callout
+\item Problem Callout
+\end{itemize}
+
+The following items are \emph{cannot} be used:
+\begin{itemize}
+\item Requirement Related-Type Node
+\item Trace Compartment
+\item Test Case Node
+\item Refinement Path
+\item Trace Path
+\item Copy Path
+\item Trace Callout
+\item Derivation Callout
+\item Verification Callout
+\item Statisfaction Callout
+\item Refinement Callout
+\item Master Requirement Callout
+\end{itemize}
 
 \subsection{Structural  diagrams}
 
