Remove unneeded sections. Add note on naming

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -68,6 +68,11 @@ The following other SysML diagrams \emph{cannot} be used:
 
 \subsection{Restrictions on Package Diagram}
 
+Note: The naming of the nodes and paths of this section and the
+following one is the same as Annex A of book ``A Practical Guide to
+SysML''.
+
+
 The following Package Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
@@ -216,83 +221,14 @@ The following items are \emph{cannot} be used:
 \item Master Requirement Callout
 \end{itemize}
 
-\subsection{Structural  diagrams}
-
-\begin{comment}
-Why ? When ? How ?
-
-First ideas :
-
-  	\begin{itemize}
-  		\item package 
-  		\item BDD 
-  		\item IBD 
-  		 	\begin{itemize}
-  				\item requirement
-  				\item ... ?
-			\end{itemize}  	
-  		\item parameters 
-	\end{itemize}  	    
 
 
-\end{comment}
-
-
-\subsection{Behavioural diagrams}
-
-
-\begin{comment}
-Why ? When ? How ?
-
-First ideas :
-
-  	\begin{itemize}
-  		\item use case 
-  		\item state machines
-  		  \begin{itemize}
-		  	\item What : description of how the state of the system evolved
-		  	\item Why : to describe at high level some behaviour 
-		  	\item Recommendations ?
-		  \end{itemize}
-  		\item activities
-  		\item sequence
-  		  \begin{itemize}
-  	\item What: description of sequence of function
-  	\item Why: to describe communication between items, specify expected  (oracle)
-  	\item Recommendations: 
-  	\begin{itemize}
-  		\item limit the size for readability
-  	\end{itemize}
-  \end{itemize}
-
-	\end{itemize}  	
-
-\end{comment}
-
-
-\subsection{Others diagrams}
-
-
-\begin{comment}
-Why ? When ? How ?
-
-First ideas :
-
- 	\begin{itemize}
-  		\item requirement
-  		\item ... ?
-	\end{itemize}  	
-
-\end{comment}
-
-
-
-\subsection{Recommendations, Restrictions}
+\subsection{Model patterns}
 
 
 
 \begin{comment}
-Which elements are recommended or not.
+Example of patterns to use.
 
 \end{comment}
 
