In D2.4, add a note explaining how diagrams and elements have been chosen

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -74,6 +74,17 @@ Following elements are allowed on all kinds of diagrams:
 \item Comment Note
 \end{itemize}
 
+\subsubsection{Notes on selected diagrams}
+
+The diagrams and diagram elements of SysML have been chosen because
+(1) they are supported by Papyrus v0.10.0 used in Eclipse Kepler
+release and because (2) they are the minimal subset of SysML needed
+for a proper system description and V\&V activities.
+
+In the future, we can decide to augment the chosen SysML subset
+because Papyrus offers new capabilities and because new elements are
+needed. This can been done at project level following a procedure
+which is not yet decided.
 
 \subsection{Restrictions on Package Diagram}
 
@@ -273,3 +284,5 @@ Example of patterns to use.
 
 \end{comment}
 
+
+% LocalWords:  SysML
