In D2.4, add recommendations on which diagrams to use for Modelling and V&V

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -277,10 +277,27 @@ The following items \emph{cannot} be used:
 
 \subsection{Model patterns}
 
+For \emph{Modelling} activity, the modeler shall only use:
+\begin{itemize}
+\item \emph{Package Diagram}
+\item \emph{Block Definition Diagram} (BDD)
+\item \emph{Internal Block Diagram} (IBD)
+\item \emph{State Machine Diagram}
+\item \emph{Requirement Diagram}
+\end{itemize}
+
+For \emph{V\&V} activities, one shall only use:
+\begin{itemize}
+\item \emph{Package Diagram}
+\item \emph{Block Definition Diagram} (BDD)
+\item \emph{Internal Block Diagram} (IBD)
+\item \emph{Sequence Diagram}
+\item \emph{Requirement Diagram}
+\end{itemize}
 
 
 \begin{comment}
-Example of patterns to use.
+FIXME: Example of patterns to use.
 
 \end{comment}
 
