[D2.4] Add Papyrus icons for Package diagram

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -11,6 +11,7 @@
 %\SetWatermarkFontSize{2cm}
 %\SetWatermarkText{Intermediate}
 
+\newcommand{\sysmlicon}[1]{\includegraphics{icons/#1}}
 
 \begin{document}
 \frontmatter
