--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -88,10 +88,10 @@ SysML''.
 The following Package Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
-\item Comment Note
-\item Package Node
+\item Comment Note \sysmlicon{Comment.png}
+\item Package Node \sysmlicon{Package.png}
 \item Packageable Element Node
-\item Import Path
+\item Import Path \sysmlicon{PackageImport.png}
 \end{itemize}
 
 The following items \emph{cannot} be used:
