[D2.4] Add Papyrus icons for BDD

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -130,12 +130,12 @@ The following items \emph{cannot} be used:
 The following Block Definition Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
-\item Block Node
-\item Enumeration Node
-\item Block Node with ``datatype'' Stereotype
-\item Composite Association Path
-\item Flow Specification Node
-\item Atomic Flow Port Node
+\item Block Node \sysmlicon{Block.png}
+\item Enumeration Node \sysmlicon{Enumeration.png}
+\item Block Node with ``datatype'' Stereotype \sysmlicon{DataType.png}
+\item Composite Association Path \sysmlicon{Association_composite.png}
+\item Flow Specification Node \sysmlicon{FlowSpecification.png}
+\item Atomic Flow Port Node \sysmlicon{FlowPort.png}  \sysmlicon{FlowPort_INOUT.png} \sysmlicon{FlowPort_IN.png} \sysmlicon{FlowPort_OUT.png}
 \end{itemize}
 
 The following items \emph{cannot} be used:
