[Ð2.4] Add IBD Papyrus icons

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -179,7 +179,7 @@ The following items \emph{cannot} be used:
 The following Internal Block Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
-\item Part Node
+\item Part Node \sysmlicon{Property.png}~\textsf{Part}
 \item Connector Path
 \end{itemize}
 
