Picture of diagrams added +  sections in §7 to complete

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -23,7 +23,7 @@
 
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.03}
+\reportnum{OETCS/WP2/D2.4~--~00.04}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -35,7 +35,7 @@
 \subtitle{ Definition of the methods used to perform the formal description}
 
 %set the date of the report here
-\date{June 2013}
+\date{September 2013}
 
 %define a list of authors and their affiliation here
 
@@ -79,7 +79,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 00.03 \\
+Document version & 00.04 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -105,7 +105,7 @@ Main reviewers & S. Baro (SNCF) \\
 \hline
   &  Name & Role & Date   \\
 \hline  
-Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & June 2013 \\
+Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & September 2013 \\
 & David Mentré & & \\
 & Matthias Güdemann & & \\
 \hline
@@ -125,6 +125,8 @@ Version &  Date & Author(s) & Justification  \\
 the document \\
 \hline  
 00.03 & 03/05/2013 & M. Petit-Doche &  Remaining remarks of formal reviews \\
+\hline  
+00.04 & 26/09/2013 & M. Petit-Doche, D. Mentré & First version of sections 7, 8 and 9   \\
 \hline  
 
 \end{tabular}
