--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -16,3 +16,9 @@ This section gives a proposal on how to use the selected approaches to produce f
 \begin{comment}
 list of chosen approaches, and for which activities they are used
 \end{comment}
+
+
+\subsection{Artifacts and common items}
+
+\subsection{Name convention}
+
