--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -19,11 +19,11 @@ The proposal is to use SysML for the highest level of modelling:
 \item Requirements will be defined and allocated with \textit{Requirements Diagrams}
 \item High level Behaviour description will be described with \textit{State Machine Diagrams}
 \end{itemize}
-\item[Safety analysis]
+\item[Safety analysis] SysML model will provide an organic and a functional architecture of the system
 \begin{itemize}
 \item Functional Breakdown Structure will be defined with \textit{Block Definition Diagrams} and \textit{Internal Block Diagrams}
 \end{itemize}
-\item[Verification and Validation]
+\item[Verification and Validation] SysML model will provide expected behavior of the system during execution: 
 \begin{itemize}
 \item Test Cases and execution traces will be defined with \textit{Sequence Diagrams}
 \end{itemize}
@@ -77,6 +77,14 @@ following one is the same as Annex A of book ``A Practical Guide to
 SysML''.
 
 
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/PackageDiagram.PNG}
+  \caption{Package Diagram}
+  \label{fig:package diagram}
+\end{figure}
+
+
 The following Package Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
@@ -107,6 +115,17 @@ The following items \emph{cannot} be used:
 \end{itemize}
 
 \subsection{Restrictions on Block Definition Diagram}
+
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/BDDDiagram.PNG}
+  \caption{Block Description Diagram}
+  \label{fig:Bdd}
+\end{figure}
+
+
 
 The following Block Definition Diagram nodes and paths can be used for
 modelling:
@@ -147,6 +166,16 @@ The following items \emph{cannot} be used:
 
 \subsection{Restrictions on Internal Block Diagram}
 
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/IBDDiagram.PNG}
+  \caption{Internal Block Diagram}
+  \label{fig:ibd}
+\end{figure}
+
+
 The following Internal Block Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
@@ -165,6 +194,16 @@ The following items \emph{cannot} be used:
 \end{itemize}
 
 \subsection{Restrictions on Sequence Diagram}
+
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/SequenceDiagram.PNG}
+  \caption{Sequence Diagram}
+  \label{fig:sd}
+\end{figure}
+
 
 The following Sequence Diagram nodes and paths can be used for
 modelling:
@@ -195,6 +234,16 @@ The following items \emph{cannot} be used:
 \end{itemize}
 
 \subsection{Restrictions on State Machine Diagram}
+
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/StateMachineDiagram.PNG}
+  \caption{State Machine Diagram}
+  \label{fig:sm diagram}
+\end{figure}
+
 
 The following State Machine Diagram nodes and paths can be used for
 modelling:
@@ -227,6 +276,14 @@ The following items \emph{cannot} be used:
 \end{itemize}
 
 \subsection{Restrictions on Requirement Diagram}
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{images/RequirementDiagram.PNG}
+  \caption{Requirement Diagram}
+  \label{fig:req diagram}
+\end{figure}
+
 
 The following Requirement Diagram nodes and paths can be used for
 modelling:
