[D2.4] Add icons for Sequence Diagram

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -208,10 +208,10 @@ The following items \emph{cannot} be used:
 The following Sequence Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
-\item Lifeline Node
-\item Synchronous Message
-\item Asynchronous Message
-\item Reply Message
+\item Lifeline Node \sysmlicon{Lifeline.png}
+\item Synchronous Message \sysmlicon{Message_synchCall.png}
+\item Asynchronous Message \sysmlicon{Message_asynchCall.png}
+\item Reply Message \sysmlicon{Message_reply.png}
 \end{itemize}
 
 The following items \emph{cannot} be used:
