[D2.4] Add icons for requirements

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -288,14 +288,14 @@ The following items \emph{cannot} be used:
 The following Requirement Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
-\item Requirement Node
+\item Requirement Node \sysmlicon{Requirement.png}
 \item Package Node
 \item Containment Path
-\item Derivation Path
-\item Satisfaction Path
-\item Verification Path
-\item Rationale Callout
-\item Problem Callout
+\item Derivation Path \sysmlicon{DeriveReqt.png}
+\item Satisfaction Path \sysmlicon{Satisfy.png}
+\item Verification Path \sysmlicon{Verify.png}
+\item Rationale Callout \sysmlicon{Rationale.png}
+\item Problem Callout \sysmlicon{Problem.png}
 \end{itemize}
 
 The following items \emph{cannot} be used:
