--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -3,7 +3,7 @@
 %\documentclass[nocc]{template/openetcs_article} 
 \usepackage{rotating,url,color}
 \graphicspath{{./template/}{.}{./images/}}
-
+\usepackage{graphicx}
 %\usepackage{draftwatermark}
 %\SetWatermarkLightness{0.85}
 %\SetWatermarkAngle{25}
