--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -20,5 +20,30 @@ list of chosen approaches, and for which activities they are used
 
 \subsection{Artifacts and common items}
 
+\begin{comment}
+list of artifacts used and provided by each approach; common items (data model); types
+\end{comment}
+
 \subsection{Name convention}
 
+
+\begin{comment}
+How to name object ? base : subset 26 §7.3.2:
+" 7.3.2.11 All Variables have one of the following prefixes:
+\begin{itemize}
+\item A\_ Acceleration
+\item D\_ distance
+\item G\_ Gradient
+\item L\_ length
+\item M\_ Miscellaneous
+\item N\_ Number
+\item NC\_ class number
+\item NID\_ identity number
+\item Q\_ Qualifier
+\item T\_ time/date
+\item V\_ Speed
+\item X\_ Text
+\end{itemize}
+
+Case sensitive language, keywords of target language (SysML, B, C, Scade 5?),...)
+\end{comment}
