--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -35,13 +35,13 @@ This list can be completed, after the results of benchmark  of secondary tools, 
 
 SysML diagrams that can be used for modeling are:
 \begin{itemize}
-\item \emph{Package Diagram}: Structure description
-\item \emph{Block Definition Diagram} (BDD): Structure description
-\item \emph{Internal Block Diagram} (IBD): Structure description
-\item \emph{Sequence Diagram}: Test case, execution trace, counter
+\item \emph{Package Diagram}  \sysmlicon{PackageDiagram.png} : Organization description
+\item \emph{Block Definition Diagram} \sysmlicon{BlockDefinitionDiagram.png} (BDD): Structure description
+\item \emph{Internal Block Diagram} \sysmlicon{InternalBlockDiagram.png} (IBD): Structure description
+\item \emph{Sequence Diagram} \sysmlicon{SequenceDiagram.png} : Test case, execution trace, counter
   example, etc.
-\item \emph{State Machine Diagram}: Behaviour description
-\item \emph{Requirement Diagram}: Requirements description
+\item \emph{State Machine Diagram} \sysmlicon{StatemachineDiagram.png} : Behaviour description
+\item \emph{Requirement Diagram} \sysmlicon{RequirementDiagram.png} : Requirements description
 \end{itemize}
 
 The following other SysML diagrams \emph{cannot} be used:
@@ -178,7 +178,7 @@ The following Internal Block Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
 \item Part Node \sysmlicon{Property.png}~\textsf{Part}
-\item Connector Path
+\item Connector Path \sysmlicon{Connector.png}
 \item Flow Specification Node \sysmlicon{FlowSpecification.png}
 \item Atomic Flow Port Node \sysmlicon{FlowPort.png}  \sysmlicon{FlowPort_INOUT.png} \sysmlicon{FlowPort_IN.png} \sysmlicon{FlowPort_OUT.png}
 \end{itemize}
