--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -24,6 +24,15 @@ list of chosen approaches, and for which activities they are used
 list of artifacts used and provided by each approach; common items (data model); types
 \end{comment}
 
+
+\subsection{Requirement naming convention}
+
+
+\begin{comment}
+TODO: Marc Behrens
+\end{comment}
+
+
 \subsection{Name convention}
 
 
@@ -45,5 +54,13 @@ How to name object ? base : subset 26 §7.3.2:
 \item X\_ Text
 \end{itemize}
 
-Case sensitive language, keywords of target language (SysML, B, C, Scade 5?),...)
+
 \end{comment}
+
+
+\begin{comment}
+Case sensitive language, keywords of target language (SysML, B, C, Scade 5?),...), UPPER case for names issued form official document (SRS, API,...), lower case for others. length of the name
+
+QA plan to check.
+\end{comment}
+
