Update D2.4 following Thomas Bardot (MERCE) review

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -131,9 +131,13 @@ The following Block Definition Diagram nodes and paths can be used for
 modelling:
 \begin{itemize}
 \item Block Node \sysmlicon{Block.png}
-\item Enumeration Node \sysmlicon{Enumeration.png}
+\item Enumeration Node \sysmlicon{Enumeration.png} and enumeration litteral
 \item Block Node with ``datatype'' Stereotype \sysmlicon{DataType.png}
 \item Composite Association Path \sysmlicon{Association_composite.png}
+\item Flow Specification Node \sysmlicon{FlowSpecification.png} and
+  Flow Properties
+\item Primitive Type Node
+\item Property Node
 \end{itemize}
 
 The following items \emph{cannot} be used:
@@ -179,8 +183,9 @@ modelling:
 \begin{itemize}
 \item Part Node \sysmlicon{Property.png}~\textsf{Part}
 \item Connector Path \sysmlicon{Connector.png}
-\item Flow Specification Node \sysmlicon{FlowSpecification.png}
-\item Atomic Flow Port Node \sysmlicon{FlowPort.png}  \sysmlicon{FlowPort_INOUT.png} \sysmlicon{FlowPort_IN.png} \sysmlicon{FlowPort_OUT.png}
+\item Atomic Flow Port Node \sysmlicon{FlowPort.png}
+  \sysmlicon{FlowPort_INOUT.png} \sysmlicon{FlowPort_IN.png}
+  \sysmlicon{FlowPort_OUT.png}
 \end{itemize}
 
 The following items \emph{cannot} be used:
