In D2.4, add a sentence on the possibility to use stereotypes for more precise semantics

--- a/D2.4/sysml.tex
+++ b/D2.4/sysml.tex
@@ -31,6 +31,14 @@ The proposal is to use SysML for the highest level of modelling:
 
 This list can be completed, after the results of benchmark  of secondary tools, either by defining use of some diagrams for other activities (for example for safety or VnV) or by defining methods and tools to use to complete SysML (for example for requirements management or database definition).
 
+It is considered to use SysML/UML stereotype mechanism to refine the
+semantics of the defined model, especially for \emph{Conception and
+  design} phase where for example some blocks could be tagged as
+Function, System or Data. See issue number 25 of requirements
+repository for
+details\footnote{\url{https://github.com/openETCS/requirements/issues/25}}.
+Currently no specific mechanism has been defined.
+
 \subsection{Selection of used diagrams}
 
 SysML diagrams that can be used for modeling are:
