Added §8.1 on SysML
Changed made on D2_4.tex to allow two-line url

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -11,6 +11,11 @@
 %\SetWatermarkFontSize{2cm}
 %\SetWatermarkText{Intermediate}
 
+% Addded to manage two-lined url @MatthieuPERIN
+\usepackage{hyperref}
+% option to have non visible box on links
+\hypersetup{hidelinks}
+
 \newcommand{\sysmlicon}[1]{\includegraphics{icons/#1}}
 
 \begin{document}
